# OC_Python_P11_Gudlift

./: .flake8  .gitignore  README.md  pyproject.toml  server.py
flake8_rapport/: index.html  tests.unit_tests.test_show_summary.report.html  tests.unit_tests.test_show_summary.source.html
